<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.teacher.fragment.FragmentTHome"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_56dp"
            android:background="@color/white"
            android:elevation="@dimen/dimen_4dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:fontFamily="@font/inter_medium"
                android:text="upload file"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_56dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:id="@+id/title"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/background_8dp_blue"
            android:hint="@string/add_title"
            android:padding="@dimen/dimen_10dp"
            android:textSize="@dimen/dimen_16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"

            android:background="@drawable/background_8dp_blue"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            app:cardCornerRadius="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_upload"
                android:layout_width="@dimen/dimen_56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_cloud_upload" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/description"
            android:maxLength="1000"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:background="@drawable/background_8dp_blue"
            android:fontFamily="@font/inter_medium"
            android:gravity="top"
            android:hint="@string/description_"
            android:padding="@dimen/dimen_10dp"
            android:textSize="@dimen/dimen_16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:text="@string/select_subject"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_height="@dimen/dimen_56dp"
            android:id="@+id/selectSubject"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:background="@drawable/background_8dp_blue"
            android:fontFamily="@font/inter_regular"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="center_vertical"
            android:text="@string/select_subject"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:textSize="@dimen/dimen_16sp" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:text="@string/send"
            style="@style/MaterialButtonCustomStyle"
            android:layout_marginBottom="70dp"

            android:id="@+id/send"/>

    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.coordinatorlayout.widget.CoordinatorLayout>