<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tuit.tuit.ui.student.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/actionHomeFragment2ToSubjectsFragment"
            app:destination="@id/subjectsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tuit.tuit.ui.student.quiz.QuizHomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home_quiz" >
        <action
            android:id="@+id/action_navigation_dashboard_to_fragmentVariants"
            app:destination="@id/fragmentVariants"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tuit.tuit.ui.student.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fragmentVariants"
        android:name="com.tuit.tuit.ui.student.quiz.FragmentVariants"
        android:label="fragment_variants"
        tools:layout="@layout/fragment_variants" >
        <argument
            android:name="name"
            app:argType="string" />
        <action
            android:id="@+id/action_fragmentVariants_to_fragmentTest"
            app:destination="@id/fragmentTest"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:enterAnim="@animator/nav_default_enter_anim"/>
        <argument
            android:name="subjectId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/fragmentTest"
        android:name="com.tuit.tuit.ui.student.quiz.FragmentTest"
        android:label="fragment_test"
        tools:layout="@layout/fragment_test" >
        <argument android:name="variantNumber" />
        <action
            android:id="@+id/action_fragmentTest_to_examFragment"
            app:destination="@id/examFragment" />
        <argument
            android:name="subjectId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/examFragment"
        android:name="com.tuit.tuit.ui.student.exam.ExamFragment"
        android:label="fragment_exam"
        tools:layout="@layout/fragment_exam" >

        <action
            android:id="@+id/action_examFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/openFileFragment"
        android:name="com.tuit.tuit.ui.student.home.OpenFileFragment"
        android:label="fragment_open_file"
        tools:layout="@layout/fragment_open_file" >
        <argument
            android:name="uri"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/subjectsFragment"
        android:name="com.tuit.tuit.ui.student.home.SubjectsFragment"
        android:label="fragment_subjects"
        tools:layout="@layout/fragment_subjects" >
        <action
            android:id="@+id/action_subjectsFragment_to_openFileFragment"
            app:destination="@id/openFileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="title"
            app:argType="string" />

    </fragment>
</navigation>